Adjust e:path、i:logout、v-t:display、g:order_change

--- a/eid.html
+++ b/eid.html
@@ -65,11 +65,11 @@
         <h1 class="m-0">基本資料</h1>
       </div>
       <div class="col-7 ps-3 pe-0 d-flex justify-content-end">
-        <a href="#"
+        <a href="executor-cms.html"
           class="col-6 col-md-3 d-flex justify-content-center m-2 border border-3 border-black link-underline link-underline-opacity-0 rounded-5 c_aqua">
           <span class="fs-6 my-auto text-black">編輯資料</span>
         </a>
-        <a href="#"
+        <a href="/backend/change-pw.html"
           class="col-6 col-md-3 d-flex justify-content-center m-2 border border-3 border-black link-underline link-underline-opacity-0 rounded-5 c_aqua">
           <span class="fs-6 my-auto text-black">更改密碼</span>
         </a>
