--- a/issues.html
+++ b/issues.html
@@ -19,6 +19,7 @@
   <script src="/static/js/localStorage.js"></script>
   <script src="/static/js/navbar.js"></script>
   <script src="/static/js/auth.js"></script>
+  <script src="/static/js/profile.js"></script>
   <script src="/static/js/issues.js"></script>
   <script src="/static/js/set-page-info-issues.js"></script>
   <script src="/static/js/set-page-info.js"></script>
@@ -56,10 +57,10 @@
       </div>
     </nav>
   </div>
-  <div class="container border border-secondary border-width-lg" style="background:rgba(157, 245, 182, 0.562);">
+  <div class="container" style="background:rgba(157, 245, 182, 0.562);">
     <div class="row">
       <div class="col">
-        <div class="row mt-5" id="issues-list"> <!-- row mt-5 --></div>
+        <div class="row mt-5 mb-4 border border-3 border-bottom-0 border-black" id="issues-list"> <!-- row mt-5 --></div>
       </div> <!-- class="col" -->
     </div> <!-- class="row" -->
     <div class="row d-flex justify-content-center border border-3 border-black">
