--- a/issues.html
+++ b/issues.html
@@ -57,12 +57,9 @@
       </div>
     </nav>
   </div>
-  <div class="container" style="background:rgba(157, 245, 182, 0.562);">
-    <div class="row">
-      <div class="col">
-        <div class="row mt-5 mb-4 border border-3 border-bottom-0 border-black" id="issues-list"> <!-- row mt-5 --></div>
-      </div> <!-- class="col" -->
-    </div> <!-- class="row" -->
+  <div class="container border border-secondary border-width-lg" style="background:rgba(157, 245, 182, 0.562);">
+    <div class="row mt-5 mb-4 border border-3 border-bottom-0 border-black" id="issues-list"> <!-- row mt-5 -->
+    </div>
     <div class="row d-flex justify-content-center border border-3 border-black">
       <a href="choice.html"
         class="col-3 col-md-2 m-2 border border-3 border-black rounded-5 link-underline link-underline-opacity-0 c_blue">
