Renew Renew nav gradient & code & button

--- a/choice.html
+++ b/choice.html
@@ -26,7 +26,7 @@
 
 <body class="bg-sd" onload="init();">
   <div class="container px-0 border border-3 border-bottom-0 border-black">
-    <nav class="navbar bg-dark" data-bs-theme="dark">
+    <nav class="navbar bg-dark bg-gradient" data-bs-theme="dark">
       <div class="container-fluid">
         <div class="col d-flex justify-content-start">
           <a class="navbar-brand mb-0 h1" href="index.html">
@@ -34,7 +34,7 @@
             <img src="static/imgs/ISU logo-s.png" width="55" height="30">
           </a>
         </div>
-        <div class="col d-flex justify-content-center">
+        <div class="col text-center">
           <p class="fs-2 mb-0 text-light">選擇介面</p>
         </div>
         <div class="col d-flex justify-content-end">
@@ -66,7 +66,7 @@
         <div class="row row-gap-5 d-flex justify-content-evenly">
           <div class="col-10 col-md-5">
             <div class="row border border-3 border-bottom-0 rounded-top-5 border-black" style="background: #D08A00;">
-              <h1 class="d-flex justify-content-center my-1">身分資訊</h1>
+              <h1 class="text-center my-1">身分資訊</h1>
             </div>
             <div class="row p-1 border border-3 border-top-0 border-bottom-0 border-black" style="background: #C4C4C4;">
               <div class="col-8">
@@ -78,13 +78,13 @@
             </div>
             <a class="link-dark link-underline link-underline-opacity-0 " href="eid.html">
               <div class="row border border-3 border-top-0 rounded-bottom-5 border-black c_red">
-                <h3 class="d-flex justify-content-center my-1">點此進入</h3>
+                <h3 class="text-center my-1">點此進入</h3>
               </div>
             </a>
           </div>
           <div class="col-10 col-md-5">
             <div class="row border border-3 border-bottom-0 rounded-top-5 border-black" style="background: #D08A00;">
-              <h1 class="d-flex justify-content-center my-1">領取任務</h1>
+              <h1 class="text-center my-1">領取任務</h1>
             </div>
             <div class="row p-1 border border-3 border-top-0 border-bottom-0 border-black" style="background: #C4C4C4">
               <div class="col-8">
@@ -96,13 +96,13 @@
             </div>
             <a class="link-dark link-underline link-underline-opacity-0 " href="wallet.html">
               <div class="row border border-3 border-top-0 rounded-bottom-5 border-black c_red">
-                <h3 class="d-flex justify-content-center my-1">點此進入</h3>
+                <h3 class="text-center my-1">點此進入</h3>
               </div>
             </a>
           </div>
           <div class="col-10 col-md-5">
             <div class="row border border-3 border-bottom-0 rounded-top-5 border-black" style="background: #D08A00;">
-              <h1 class="d-flex justify-content-center my-1">交易所</h1>
+              <h1 class="text-center my-1">交易所</h1>
             </div>
             <div class="row p-1 border border-3 border-top-0 border-bottom-0 border-black" style="background: #C4C4C4">
               <div class="col-8">
@@ -115,13 +115,13 @@
             </div>
             <a class="link-dark link-underline link-underline-opacity-0 " href="trade.html">
               <div class="row border border-3 border-top-0 rounded-bottom-5 border-black c_red">
-                <h3 class="d-flex justify-content-center my-1">點此進入</h3>
+                <h3 class="text-center my-1">點此進入</h3>
               </div>
             </a>
           </div>
           <div class="col-10 col-md-5">
             <div class="row  border border-3 border-bottom-0 rounded-top-5 border-black" style="background: #D08A00;">
-              <h1 class="d-flex justify-content-center my-1">歷史紀錄</h1>
+              <h1 class="text-center my-1">歷史紀錄</h1>
             </div>
             <div class="row p-1 border border-3 border-top-0 border-bottom-0 border-black" style="background: #C4C4C4">
               <div class="col-8">
@@ -134,13 +134,13 @@
             </div>
             <a class="link-dark link-underline link-underline-opacity-0 " href="verified-tasks.html">
               <div class="row border border-3 border-top-0 rounded-bottom-5 border-black c_red">
-                <h3 class="d-flex justify-content-center my-1">點此進入</h3>
+                <h3 class="text-center my-1">點此進入</h3>
               </div>
             </a>
           </div>
           <div class="col-10 col-md-5">
             <div class="row border border-3 border-bottom-0 rounded-top-5 border-black" style="background: #D08A00;">
-              <h1 class="d-flex justify-content-center my-1">永續合作</h1>
+              <h1 class="text-center my-1">永續合作</h1>
             </div>
             <div class="row p-1 border border-3 border-top-0 border-bottom-0 border-black" style="background: #C4C4C4">
               <div class="col-8">
@@ -151,9 +151,9 @@
                   class="w-100 border border-2 border-black rounded-circle">
               </div>
             </div>
-            <a class="link-dark link-underline link-underline-opacity-0 " href="issues.html">
+            <a class="link-dark link-underline link-underline-opacity-0" href="issues.html">
               <div class="row border border-3 border-top-0 rounded-bottom-5 border-black c_red">
-                <h3 class="d-flex justify-content-center my-1">點此進入</h3>
+                <h3 class="text-center my-1">點此進入</h3>
               </div>
             </a>
           </div>
