--- a/issues.html
+++ b/issues.html
@@ -29,7 +29,7 @@
 
 <body onload="init();">
   <div class="container px-0 border border-3 border-bottom-0 border-black">
-    <nav class="navbar bg-dark" data-bs-theme="dark">
+    <nav class="navbar bg-dark bg-gradient" data-bs-theme="dark">
       <div class="container-fluid">
         <div class="col d-flex justify-content-start">
           <a class="navbar-brand mb-0 h1" href="index.html">
@@ -62,8 +62,8 @@
     </div>
     <div class="row d-flex justify-content-center border border-3 border-black">
       <a href="choice.html"
-        class="col-3 col-md-2 m-2 border border-3 border-black rounded-5 link-underline link-underline-opacity-0 c_blue">
-        <p class="fs-3 d-flex justify-content-center my-auto text-light">返回</p>
+        class="col-3 col-md-2 m-2 border border-3 border-black rounded-5 link-underline link-underline-opacity-0 btn btn-primary">
+        <p class="fs-3 text-center my-auto text-light">返回</p>
       </a>
     </div>
   </div> <!-- container border border-secondary border-width-lg -->
