--- a/trade-request.html
+++ b/trade-request.html
@@ -25,7 +25,7 @@
 
 <body>
   <div class="container px-0 border border-3 border-bottom-0 border-black">
-    <nav class="navbar bg-dark" data-bs-theme="dark">
+    <nav class="navbar bg-dark bg-gradient" data-bs-theme="dark">
       <div class="container-fluid">
         <div class="col d-flex justify-content-start">
           <a class="navbar-brand mb-0 h1" href="index.html">
