Renew adjsut code & new dropdown_item & adjust form

--- a/choice.html
+++ b/choice.html
@@ -157,6 +157,9 @@
               </div>
             </a>
           </div>
+          <div class="col-10 col-md-5">
+            <a href="verifier-cms-list.html" style="color: #c4c4c400;">方便進入任務介面</a>
+          </div>
         </div>
       </div>
     </div>
