--- a/trade-request.html
+++ b/trade-request.html
@@ -34,7 +34,7 @@
           </a>
         </div>
         <div class="col d-flex justify-content-center">
-          <p class="fs-4 mb-0 text-light">交易設定</p>
+          <p class="fs-2 mb-0 text-light">交易設定</p>
         </div>
         <div class="col d-flex justify-content-end">
           <div class="dropdown">
@@ -56,15 +56,21 @@
   <div class="container" style="background:rgba(157, 245, 182, 0.562);">
     <div class="row border border-3 border-top-0 border-black py-2">
       <div class="col-12 col-md-6 order-1 order-md-0">
-        <p class="fs-4 fw-bold" id="request">交易任務名稱</p>
-        <input class="fs-5 bg-secondary text-light" id="request_name"></input>
-        <p class="fs-4 fw-bold mt-5">交易時數</p>
-        <div class="input-group mb-3">
-          <input type="text" class="form-control bg-secondary text-light" id="request_time">
-          <span class="input-group-text bg-secondary text-light">小時</span>
+        <div class="mb-3">
+          <label for="Trade_Mission" class="form-label fs-3 fw-bold">交易任務名稱</label>
+          <input type="text" class="form-control" id="Trade_Mission" value="打掃" readonly>
+        </div>  
+        <div class="col-4 mb-3">
+          <label for="Trade_Time" class="form-label fs-3 fw-bold">交易時數</label>
+          <div class="input-group">
+            <input type="number" value="1" name="Time" min="1" max="12" step="1" class="form-control" id="Trade_Time">
+            <span class="input-group-text" id="basic-addon1">小時</span>
+          </div>
         </div>
-        <p class="fs-4 fw-bold mt-5">交易任務理念</p>
-        <textarea class="fs-5 bg-secondary text-light form-control" id="request_text" rows="4"></textarea>
+        <div class="mb-3">
+          <label for="Trade_Text" class="form-label fs-3 fw-bold">交易任務理念</label>
+          <textarea class="form-control" id="Trade_Text" rows="3"></textarea>
+        </div>
       </div>
       <div class="col-12 col-md-6 order-0 order-md-1 d-flex justify-content-center align-items-center">
         <div class="text-center">
