--- a/trade.html
+++ b/trade.html
@@ -56,19 +56,21 @@
   <div class="container" style="background:rgba(157, 245, 182, 0.562);">
     <div class="row border border-3 border-black">
       <div class="col d-flex justify-content-end">
-        <h2 class="my-1">時間餘額 <span class="fs-4" id="money">000小時</span></h2>
+        <h2 class="my-1"><i class="bi bi-clock me-2"></i>時間餘額<span class="fs-4" id="money">0小時</span></h2>
       </div>
     </div>
     <div class="row border border-3 border-top-0 border-black">
       <div class="col d-flex justify-content-start">
-        <h2 class="my-1">可兌換服務項目</h2>
+        <h2 class="my-1"><i class="bi bi-currency-exchange me-2"></i>可兌換服務項目</h2>
       </div>
     </div>
     <div class="row border border-3 border-top-0 border-black" id="trade"style="background-color: rgba(126, 68, 2, 0.562); height: 650px; overflow-y: scroll;">
-        <a class="col-12 col-md-4 d-flex justify-content-center align-items-center bg-danger link-underline link-underline-opacity-0 text-dark fs-1" href="trade-request.html">打掃</a>
-        <div class="col-12 col-md-4 d-flex justify-content-center align-items-center bg-success fs-1">照顧</div>
-        <div class="col-12 col-md-4 d-flex justify-content-center align-items-center bg-info fs-1">睡覺</div>
-        <div class="col-12 col-md-4 d-flex justify-content-center align-items-center bg-warning fs-1">整理</div>
+    <div class="col-12 col-md-4 bg-danger d-flex justify-content-center align-items-center border border-2 border-dark">
+      <a class="link-underline link-underline-opacity-0 text-dark fs-1" href="trade-request.html">打掃</a>
+    </div>
+        <div class="col-12 col-md-4 d-flex justify-content-center align-items-center bg-success fs-1">任務二</div>
+        <div class="col-12 col-md-4 d-flex justify-content-center align-items-center bg-info fs-1">任務三</div>
+        <div class="col-12 col-md-4 d-flex justify-content-center align-items-center bg-warning fs-1">任務四</div>
     </div>
     <div class="row d-flex justify-content-center border border-3 border-top-0 border-black">
       <a href="choice.html"
