Renew_Code p->label

--- a/trade-request.html
+++ b/trade-request.html
@@ -64,7 +64,7 @@
           <label for="Trade_Time" class="form-label fs-3 fw-bold">交易時數</label>
           <div class="input-group">
             <input type="number" value="1" name="Time" min="1" max="12" step="1" class="form-control" id="Trade_Time">
-            <span class="input-group-text" id="basic-addon1">小時</span>
+            <span class="input-group-text">小時</span>
           </div>
         </div>
         <div class="mb-3">
