--- a/trade-request.html
+++ b/trade-request.html
@@ -21,6 +21,7 @@
   <script src="/static/js/set-page-info.js"></script>
   <script src="/static/js/init.js"></script>
   <script src="/static/js/getGroup.js"></script>
+  <script src="/static/js/image.js"></script>
   <title>交易所-要求</title>
 
 <body>
@@ -57,24 +58,25 @@
     <div class="row border border-3 border-top-0 border-black py-2">
       <div class="col-12 col-md-6 order-1 order-md-0">
         <div class="mb-3">
-          <label for="Trade_Mission" class="form-label fs-3 fw-bold">交易任務名稱</label>
-          <input type="text" class="form-control" id="Trade_Mission" value="打掃" readonly>
+          <label for="task_name" class="form-label fs-3 fw-bold">交易任務名稱</label>
+          <input type="text" class="form-control" id="task_name" value="打掃" readonly>
         </div>  
         <div class="col-4 mb-3">
-          <label for="Trade_Time" class="form-label fs-3 fw-bold">交易時數</label>
+          <label for="token" class="form-label fs-3 fw-bold">交易時數</label>
           <div class="input-group">
-            <input type="number" value="1" name="Time" min="1" max="12" step="1" class="form-control" id="Trade_Time">
+            <input type="number" value="1" name="Time" min="1" max="12" step="1" class="form-control" id="token">
             <span class="input-group-text">小時</span>
           </div>
         </div>
         <div class="mb-3">
-          <label for="Trade_Text" class="form-label fs-3 fw-bold">交易任務理念</label>
-          <textarea class="form-control" id="Trade_Text" rows="3"></textarea>
+          <label for="overview" class="form-label fs-3 fw-bold">交易任務理念</label>
+          <textarea class="form-control" id="overview" rows="3"></textarea>
         </div>
       </div>
       <div class="col-12 col-md-6 order-0 order-md-1 d-flex justify-content-center align-items-center">
-        <div class="text-center">
-          <img src="https://picsum.photos/300/300?random=10" class="rounded" class="w-100">
+        <div class="border d-flex align-items-center justify-content-center position-relative" style="height: 120px;">
+          <img id="task_cover" src="/static/imgs/image_icon.svg" width="100" height="100" alt="">
+          <a href="#" onclick="setImgToLS('task_cover');" class="stretched-link"></a>
         </div>
       </div>
     </div>
@@ -84,11 +86,12 @@
         <p class="fs-3 d-flex justify-content-center my-auto text-light">返回</p>
       </a>
       <button
-        class="col-3 col-md-2 m-2 border border-3 border-black rounded-5 link-underline link-underline-opacity-0 btn btn-danger">
-        <p class="fs-3 d-flex justify-content-center my-auto text-light" id="doneBtn">確認</p>
+        class="col-3 col-md-2 m-2 border border-3 border-black rounded-5 link-underline link-underline-opacity-0 btn btn-danger" id="doneBtn">
+        <p class="fs-3 d-flex justify-content-center my-auto text-light">確認</p>
       </button>
     </div>
   </div>
+  <script src="/static/js/new_tasks.js"></script>
 </body>
 
 </html>
