Request_M&D Request can modify and delete

--- a/executor-cms.html
+++ b/executor-cms.html
@@ -130,31 +130,31 @@
       </div>
       <div class="col-12 col-md-6">
         <div class="mb-3">
-          <label for="username" class="form-label">使用者名稱</label>
+          <label for="username" class="form-label fs-3">使用者名稱</label>
           <div class="input-group">
             <input id="username" type="text" class="form-control" placeholder="請輸入使用者名稱">
             <button class="btn btn-primary" onclick="edit_username()">確認</button>
           </div>
         </div>
         <div class="mb-3">
-          <label for="email" class="form-label">電子郵件</label>
+          <label for="email" class="form-label fs-3">電子郵件</label>
           <span id="email" class="form-control-plaintext mb-3" readonly></span>
         </div>
         <div class="mb-3">
-          <label for="" class="form-label">密碼</label>
+          <label for="" class="form-label fs-3">密碼</label>
           <div class="input-group">
             <a href="/backend/change-pw.html" class="btn btn-primary">更改</a>
           </div>
         </div>
         <div class="mb-3">
-          <label for="group" class="form-label">身分識別</label>
+          <label for="group" class="form-label fs-3">身分識別</label>
           <span class="form-control-plaintext" id="group" readonly></span>
         </div>
         <div class="mb-3 col-3">
           <label for="balance">時數</label>
           <div class="input-group">
-            <span id="balance" class="form-control"></span>
-            <span class="input-group-text">小時</span>
+            <span id="balance"></span>
+            <span>小時</span>
           </div>
         </div>
       </div>
@@ -163,47 +163,47 @@
       <h1 class="text-center">專長</h1>
     </div>
     <div class="row mb-3">
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-md-3 fs-4">
         <input class="form-check-input" type="checkbox" value="行政支援" id="gridCheck1">
         <label for="gridCheck1" class="form-label">1. 行政支援</label>
       </div>
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-md-3 fs-4">
         <input class="form-check-input" type="checkbox" value="課業輔導" id="gridCheck2">
         <label for="gridCheck2" class="form-label">2. 課業輔導</label>
       </div>
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-md-3 fs-4">
         <input class="form-check-input" type="checkbox" value="社區服務" id="gridCheck3">
         <label for="gridCheck3" class="form-label">3. 社區服務</label>
       </div>
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-md-3 fs-4">
         <input class="form-check-input" type="checkbox" value="生活扶助" id="gridCheck4">
         <label for="gridCheck4" class="form-label">4. 生活扶助</label>
       </div>
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-md-3 fs-4">
         <input class="form-check-input" type="checkbox" value="電腦科技" id="gridCheck5">
         <label for="gridCheck5" class="form-label">5. 電腦科技</label>
       </div>
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-md-3 fs-4">
         <input class="form-check-input" type="checkbox" value="環保教育" id="gridCheck6">
         <label for="gridCheck6" class="form-label">6. 環保教育</label>
       </div>
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-md-3 fs-4">
         <input class="form-check-input" type="checkbox" value="藝術文化" id="gridCheck7">
         <label for="gridCheck7" class="form-label">7. 藝術文化</label>
       </div>
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-md-3 fs-4">
         <input class="form-check-input" type="checkbox" value="健康醫療" id="gridCheck8">
         <label for="gridCheck8" class="form-label">8. 健康醫療</label>
       </div>
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-md-3 fs-4">
         <input class="form-check-input" type="checkbox" value="權益倡導" id="gridCheck9">
         <label for="gridCheck9" class="form-label">9. 權益倡導</label>
       </div>
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-md-3 fs-4">
         <input class="form-check-input" type="checkbox" value="國際交流" id="gridCheck10">
         <label for="gridCheck10" class="form-label">10. 國際交流</label>
       </div>
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-md-3 fs-4">
         <input class="form-check-input" type="checkbox" id="otherCheck" onclick="checkBoxFn()">
         <label for="otherCheck" class="form-label">11. 其他</label>
       </div>
@@ -213,7 +213,7 @@
     </div>
     <div class="row mb-3">
       <div class="col d-flex justify-content-center">
-        <button type="submit" class="btn btn-primary w-25" id="submitBtn">儲存</button>
+        <button type="submit" class="btn btn-primary w-25 fs-3" id="submitBtn">儲存</button>
       </div>
     </div>
     <script src="/static/js/set-description.js"></script>
