--- a/trade.html
+++ b/trade.html
@@ -22,8 +22,8 @@
   <script src="/static/js/init.js"></script>
   <script src="/static/js/getGroup.js"></script>
   <title>交易所</title>
-
-<body>
+</head>
+<body onload="init();">
   <div class="container px-0 border border-3 border-bottom-0 border-black">
     <nav class="navbar bg-dark bg-gradient" data-bs-theme="dark">
       <div class="container-fluid">
@@ -56,7 +56,7 @@
   <div class="container" style="background:rgba(157, 245, 182, 0.562);">
     <div class="row border border-3 border-black">
       <div class="col d-flex justify-content-end">
-        <h2 class="my-1"><i class="bi bi-clock me-2"></i>時間餘額<span class="fs-4" id="money">0小時</span></h2>
+        <p class="my-1 fs-3"><i class="bi bi-clock me-2"></i>時間餘額<span class="fs-3" id="money">0</span>小時</p>
       </div>
     </div>
     <div class="row border border-3 border-top-0 border-black">
