--- a/verifier-cms-creation.html
+++ b/verifier-cms-creation.html
@@ -95,7 +95,7 @@
           </div>
           <div class="col-6">
             <div class="input-group">
-              <input id="token" class="form-control" type="text">
+              <input type="number" value="1" name="Time" min="1" max="1000" step="1" class="form-control" id="token">
               <div class="input-group-append">
                 <span class="input-group-text">小時</span>
               </div>
