small update 1. wallet can change mode 2. only display my_desdescription

--- a/eid.html
+++ b/eid.html
@@ -100,7 +100,7 @@
       </div>
     </div>
     <div class="row p-3 mt-0 d-flex align-items-center border border-3 border-black">
-      <div class="row row-gap-3">
+      <!-- <div class="row row-gap-3">
         <div class="col-12 col-md-3">
           <input class="form-check-input checkbox-1x skillCheck" value="行政支援" type="checkbox" id="gridCheck1" disabled>
           <label class="form-check-label ps-3" for="gridCheck1">
@@ -171,6 +171,9 @@
         <div class="col-12">
           <textarea class="form-control" id="textArea" disabled rows="2" style="display: none;"></textarea>
         </div>
+      </div> -->
+      <div class="row row-gap-3" id="list_des">
+
       </div>
       <button type="submit" class="btn btn-primary w-25" id="submitBtn" style="display: none;">儲存</button>
       <!-- 不想有驚嘆號 -->
