--- a/trade-request.html
+++ b/trade-request.html
@@ -24,7 +24,7 @@
   <script src="/static/js/image.js"></script>
   <title>交易所-要求</title>
 
-<body>
+<body onload="init()">
   <div class="container px-0 border border-3 border-bottom-0 border-black">
     <nav class="navbar bg-dark bg-gradient" data-bs-theme="dark">
       <div class="container-fluid">
@@ -91,7 +91,7 @@
       </button>
     </div>
   </div>
-  <script src="/static/js/new_tasks.js"></script>
+  <script src="/static/js/new_trade_request.js"></script>
 </body>
 
 </html>
