--- a/eid.html
+++ b/eid.html
@@ -175,8 +175,7 @@
       <div class="row row-gap-3" id="list_des">
 
       </div>
-      <button type="submit" class="btn btn-primary w-25" id="submitBtn" style="display: none;">儲存</button>
-      <!-- 不想有驚嘆號 -->
+      <!-- <button type="submit" class="btn btn-primary w-25" id="submitBtn" style="display: none;">儲存</button> -->
     </div>
     <div class="row d-flex justify-content-center border border-3 border-top-0 border-black">
       <a href="choice.html"
@@ -185,8 +184,8 @@
       </a>
     </div>
   </div>
-  <script src="/static/js/set-description.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <!-- <script src="/static/js/set-description.js"></script> -->
+  <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
 </body>
 <a href=""></a>
 
