--- a/executor-cms.html
+++ b/executor-cms.html
@@ -151,7 +151,7 @@
           <span class="form-control-plaintext" id="group" readonly></span>
         </div>
         <div class="mb-3 col-3">
-          <label for="balance">時數</label>
+          <label for="balance" class="fs-3">時數</label>
           <div class="input-group">
             <span id="balance"></span>
             <span>小時</span>
@@ -212,8 +212,11 @@
       </div>
     </div>
     <div class="row mb-3">
-      <div class="col d-flex justify-content-center">
-        <button type="submit" class="btn btn-primary w-25 fs-3" id="submitBtn">儲存</button>
+      <div class="col-6 d-flex justify-content-end">
+        <a href="eid.html" class="btn btn-danger w-50 fs-3">取消</a>
+      </div>
+      <div class="col-6 d-flex justify-content-start">
+        <button type="submit" class="btn btn-primary w-50 fs-3" id="submitBtn">儲存</button>
       </div>
     </div>
     <script src="/static/js/set-description.js"></script>
