專長管理更新

--- a/eid.html
+++ b/eid.html
@@ -86,7 +86,7 @@
         <p class="fs-4 fw-bold mt-5">時數</p>
         <p class="fs-6"><span id="balance"></span>小時(hr)</p>
         <p class="fs-4 fw-bold mt-5">信用點數</p>
-        <p class="fs-6">0~100 or -50~50</p>
+        <p class="fs-6" id="point">0</p>
       </div>
       <div class="col-12 col-md-5 order-1 order-md-2">
         <div id="img_avatar" class="bg-contain border border-1 border-black"
@@ -100,82 +100,8 @@
       </div>
     </div>
     <div class="row p-3 mt-0 d-flex align-items-center border border-3 border-black">
-      <!-- <div class="row row-gap-3">
-        <div class="col-12 col-md-3">
-          <input class="form-check-input checkbox-1x skillCheck" value="行政支援" type="checkbox" id="gridCheck1" disabled>
-          <label class="form-check-label ps-3" for="gridCheck1">
-            1. 行政支援
-          </label>
-        </div>
-        <div class="col-12 col-md-3">
-          <input class="form-check-input checkbox-1x skillCheck" value="課業輔導" type="checkbox" id="gridCheck2" disabled>
-          <label class="form-check-label ps-3" for="gridCheck2">
-            2. 課業輔導
-          </label>
-        </div>
-        <div class="col-12 col-md-3">
-          <input class="form-check-input checkbox-1x skillCheck" value="社區服務" type="checkbox" id="gridCheck3" disabled>
-          <label class="form-check-label ps-3" for="gridCheck3">
-            3. 社區服務
-          </label>
-        </div>
-        <div class="col-12 col-md-3">
-          <input class="form-check-input checkbox-1x skillCheck" value="生活扶助" type="checkbox" id="gridCheck4" disabled>
-          <label class="form-check-label ps-3" for="gridCheck4">
-            4. 生活扶助
-          </label>
-        </div>
-        <div class="col-12 col-md-3">
-          <input class="form-check-input checkbox-1x skillCheck" value="電腦科技" type="checkbox" id="gridCheck5" disabled>
-          <label class="form-check-label ps-3" for="gridCheck5">
-            5. 電腦科技
-          </label>
-        </div>
-        <div class="col-12 col-md-3">
-          <input class="form-check-input checkbox-1x skillCheck" value="環保教育" type="checkbox" id="gridCheck6" disabled>
-          <label class="form-check-label ps-3" for="gridCheck6">
-            6. 環保教育
-          </label>
-        </div>
-        <div class="col-12 col-md-3">
-          <input class="form-check-input checkbox-1x skillCheck" value="藝術文化" type="checkbox" id="gridCheck7" disabled>
-          <label class="form-check-label ps-3" for="gridCheck7">
-            7. 藝術文化
-          </label>
-        </div>
-        <div class="col-12 col-md-3">
-          <input class="form-check-input checkbox-1x skillCheck" value="健康醫療" type="checkbox" id="gridCheck8" disabled>
-          <label class="form-check-label ps-3" for="gridCheck8">
-            8. 健康醫療
-          </label>
-        </div>
-        <div class="col-12 col-md-3">
-          <input class="form-check-input checkbox-1x skillCheck" value="權益倡導" type="checkbox" id="gridCheck9" disabled>
-          <label class="form-check-label ps-3" for="gridCheck9">
-            9. 權益倡導
-          </label>
-        </div>
-        <div class="col-12 col-md-3">
-          <input class="form-check-input checkbox-1x skillCheck" value="國際交流" type="checkbox" id="gridCheck10" disabled>
-          <label class="form-check-label ps-3" for="gridCheck10">
-            10. 國際交流
-          </label>
-        </div>
-        <div class="col-12 col-md-3">
-          <input class="form-check-input checkbox-1x skillCheck" type="checkbox" id="otherCheck" disabled
-            onclick="checkBoxFn()">
-          <label class="form-check-label ps-3" for="otherCheck">
-            11. 其他
-          </label>
-        </div>
-        <div class="col-12">
-          <textarea class="form-control" id="textArea" disabled rows="2" style="display: none;"></textarea>
-        </div>
-      </div> -->
       <div class="row row-gap-3" id="list_des">
-
       </div>
-      <!-- <button type="submit" class="btn btn-primary w-25" id="submitBtn" style="display: none;">儲存</button> -->
     </div>
     <div class="row d-flex justify-content-center border border-3 border-top-0 border-black">
       <a href="choice.html"
@@ -184,9 +110,6 @@
       </a>
     </div>
   </div>
-  <!-- <script src="/static/js/set-description.js"></script> -->
-  <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
 </body>
-<a href=""></a>
 
 </html>
