--- a/choice.html
+++ b/choice.html
@@ -26,32 +26,7 @@
 
 <body class="bg-sd" onload="init();">
   <div class="container px-0 border border-3 border-bottom-0 border-black">
-    <nav class="navbar bg-dark bg-gradient" data-bs-theme="dark">
-      <div class="container-fluid">
-        <div class="col d-flex justify-content-start">
-          <a class="navbar-brand mb-0 h1" href="index.html">
-            <img class="mx-1" src="static/imgs/eID-logo.png" width="55" height="30">
-            <img src="static/imgs/ISU logo-s.png" width="55" height="30">
-          </a>
-        </div>
-        <div class="col text-center">
-          <p class="fs-2 mb-0 text-light">選擇介面</p>
-        </div>
-        <div class="col d-flex justify-content-end">
-          <div class="dropdown">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              <i class="bi bi-gear"></i>
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end">
-              <div class="container justify-content-center">
-                <div class="row" id="dropdown">
-                </div>
-              </div>
-            </ul>
-          </div>
-        </div>
-      </div>
+    <nav class="navbar bg-dark bg-gradient" data-bs-theme="dark" id="navbar">
     </nav>
   </div>
   <div class="container px-3 border border-3 border-top-0 border-black" style="background: rgba(157, 245, 182, 0.562);">
