--- a/issues.html
+++ b/issues.html
@@ -25,36 +25,12 @@
   <script src="/static/js/set-page-info.js"></script>
   <script src="/static/js/init.js"></script>
   <script src="/static/js/getGroup.js"></script>
+  <title>永續合作</title>
 </head>
 
 <body onload="init();">
   <div class="container px-0 border border-3 border-bottom-0 border-black">
-    <nav class="navbar bg-dark bg-gradient" data-bs-theme="dark">
-      <div class="container-fluid">
-        <div class="col d-flex justify-content-start">
-          <a class="navbar-brand mb-0 h1" href="index.html">
-            <img class="mx-1" src="static/imgs/eID-logo.png" width="55" height="30">
-            <img src="static/imgs/ISU logo-s.png" width="55" height="30">
-          </a>
-        </div>
-        <div class="col d-flex justify-content-center">
-          <p class="fs-2 mb-0 text-light">永續合作</p>
-        </div>
-        <div class="col d-flex justify-content-end">
-          <div class="dropdown">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              <i class="bi bi-gear"></i>
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end">
-              <div class="container justify-content-center">
-                <div class="row" id="dropdown">
-                </div>
-              </div>
-            </ul>
-          </div>
-        </div>
-      </div>
+    <nav class="navbar bg-dark bg-gradient" data-bs-theme="dark" id="navbar">
     </nav>
   </div>
   <div class="container border border-secondary border-width-lg" style="background:rgba(157, 245, 182, 0.562);">
