--- a/trade-request.html
+++ b/trade-request.html
@@ -26,8 +26,8 @@
 
 <body onload="init()">
   <div class="container px-0 border border-3 border-bottom-0 border-black">
-    <nav class="navbar bg-dark bg-gradient" data-bs-theme="dark">
-      <div class="container-fluid">
+    <nav class="navbar bg-dark bg-gradient" data-bs-theme="dark" id="navbar">
+      <!-- <div class="container-fluid">
         <div class="col d-flex justify-content-start">
           <a class="navbar-brand mb-0 h1" href="index.html">
             <img class="mx-1" src="static/imgs/eID-logo.png" width="55" height="30">
@@ -51,7 +51,7 @@
             </ul>
           </div>
         </div>
-      </div>
+      </div> -->
     </nav>
   </div>
   <div class="container" style="background:rgba(157, 245, 182, 0.562);">
