串連API 和 bug fix

--- a/wallet.html
+++ b/wallet.html
@@ -19,6 +19,8 @@
   <script src="/static/js/profile.js"></script>
   <script src="/static/js/auth.js"></script>
   <script src="/static/js/set-page-info.js"></script>
+  <script src="/static/js/set_page_info_verifier_cms_list.js"></script>
+  <script src="/static/js/issues.js"></script>
   <script src="/static/js/getGroup.js"></script>
   <script src="/static/js/init.js"></script>
   <script>
@@ -146,10 +148,3 @@
 <script src="static/js/receive_tasks.js"></script>
 
 </html>
-
-
-<button
-  class="col-3 col-md-2 m-2 border border-3 border-black rounded-5 link-underline link-underline-opacity-0 btn btn-danger"
-  id="testBtn">
-  <p class="fs-3 d-flex justify-content-center my-auto text-light">任務接取測試</p>
-</button>
