永續合作介面修正

--- a/issues.html
+++ b/issues.html
@@ -58,7 +58,10 @@
     </nav>
   </div>
   <div class="container border border-secondary border-width-lg" style="background:rgba(157, 245, 182, 0.562);">
-    <div class="row mt-5 mb-4 border border-3 border-bottom-0 border-black" id="issues-list"> <!-- row mt-5 -->
+    <div class="row d-flex justify-content-center border border-3 border-bottom-0 border-black">
+      <h1>顯示目前任務</h1>
+    </div>
+    <div class="row py-2 border border-3 border-bottom-0 border-black" id="issues-list"> <!-- row mt-5 -->
     </div>
     <div class="row d-flex justify-content-center border border-3 border-black">
       <a href="choice.html"
