主要修改api_url domain更改

--- a/choice.html
+++ b/choice.html
@@ -70,7 +70,7 @@
             </div>
             <div class="row p-1 border border-3 border-top-0 border-bottom-0 border-black" style="background: #C4C4C4;">
               <div class="col-8">
-                <p class="fs-6">此介面是用來顯示個人的身分資料和編輯個人的暱稱和頭像(已完成)</p>
+                <p class="fs-5">此介面是用來顯示個人的身分資料和編輯個人的暱稱和頭像</p>
               </div>
               <div class="col-4 p-1">
                 <img src="static/imgs/face_smile_man2.jpg" class="w-100 border border-2 border-black rounded-circle">
@@ -88,7 +88,7 @@
             </div>
             <div class="row p-1 border border-3 border-top-0 border-bottom-0 border-black" style="background: #C4C4C4">
               <div class="col-8">
-                <p class="fs-6">現在透過QRcode來領取任務(暫定)，預定之後做出系統根據個人的專長找出適合的任務(未完成)</p>
+                <p class="fs-5">現在透過QRcode來領取任務或系統根據個人的專長找出適合的任務</p>
               </div>
               <div class="col-4 p-1">
                 <img src="static/imgs/todo_people.jpg" class="w-100 border border-2 border-black rounded-circle">
@@ -106,7 +106,7 @@
             </div>
             <div class="row p-1 border border-3 border-top-0 border-bottom-0 border-black" style="background: #C4C4C4">
               <div class="col-8">
-                <p class="fs-6">可透過個人的完成任務時間來等價交換物品和服務(未完成)</p>
+                <p class="fs-5">可透過個人的完成任務時間來等價交換服務</p>
               </div>
               <div class="col-4 p-1">
                 <img src="static/imgs/money_bag_dollar.jpg"
@@ -125,7 +125,7 @@
             </div>
             <div class="row p-1 border border-3 border-top-0 border-bottom-0 border-black" style="background: #C4C4C4">
               <div class="col-8">
-                <p class="fs-6">可以看到之前接取的任務詳細和交易所的使用紀錄(完成嗎?)</p>
+                <p class="fs-5">可以看到之前接取的任務詳細和交易所的使用紀錄</p>
               </div>
               <div class="col-4 p-1">
                 <img src="static/imgs/book_tosyokan_label.png"
@@ -144,7 +144,7 @@
             </div>
             <div class="row p-1 border border-3 border-top-0 border-bottom-0 border-black" style="background: #C4C4C4">
               <div class="col-8">
-                <p class="fs-6">尋找目前已有的任務<br>發布任務(任務發起人專用)(還沒)</p>
+                <p class="fs-5">看目前已接受的任務並且完成任務</p>
               </div>
               <div class="col-4 p-1">
                 <img src="static/imgs/leader_business_man.jpg"
@@ -158,7 +158,7 @@
             </a>
           </div>
           <div class="col-10 col-md-5">
-            <a href="verifier-cms-list.html" style="color: #c4c4c400;">方便進入任務介面</a>
+            
           </div>
         </div>
       </div>
