--- a/wallet.html
+++ b/wallet.html
@@ -2,148 +2,154 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
-  <link href="/static/css/style.css" rel="stylesheet" type="text/css">
-  <script src="/static/js/config.js"></script>
-  <script src="/static/js/localStorage.js"></script>
-  <script src="/static/js/navbar.js"></script>
-  <script src="/static/js/profile.js"></script>
-  <script src="/static/js/auth.js"></script>
-  <script src="/static/js/set-page-info.js"></script>
-  <script src="/static/js/set_page_info_verifier_cms_list.js"></script>
-  <script src="/static/js/issues.js"></script>
-  <script src="/static/js/getGroup.js"></script>
-  <script src="/static/js/init.js"></script>
-  <script>
-    const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-    const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
-  </script>
-  <script>
-    function Change(oc) {
-      const camera = document.getElementById('camera');
-      const mission = document.getElementById('mission_list');
-      const btn1 = document.getElementById('btn1');
-      const btn2 = document.getElementById('btn2');
-      const text = "d-flex justify-content-end";
-      const header_text = document.getElementById('header_text');
-      if (oc) {
-        camera.setAttribute("class", "row d-flex justify-content-center py-3 border border-3 border-top-0 border-black" + " d-none")
-        mission.setAttribute("class", "row row-cols-1 row-cols-md-4 py-3 border border-3 border-top-0 border-black")
-        btn1.setAttribute("class", text + ' d-none');
-        btn2.setAttribute("class", text);
-        header_text.innerHTML = '只顯示適合你的任務 <i class="bi bi-question-circle-fill" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>';
-      }
-      else {
-        camera.setAttribute("class", "row d-flex justify-content-center py-3 border border-3 border-top-0 border-black")
-        mission.setAttribute("class", "row row-cols-1 row-cols-md-4 py-3 border border-3 border-top-0 border-black" + " d-none")
-        btn1.setAttribute("class", text);
-        btn2.setAttribute("class", text + " d-none");
-        header_text.innerText = "透過掃描來領取任務";
-      }
-    }
-  </script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <link href="/static/css/style.css" rel="stylesheet" type="text/css">
+    <script src="/static/js/config.js"></script>
+    <script src="/static/js/localStorage.js"></script>
+    <script src="/static/js/navbar.js"></script>
+    <script src="/static/js/profile.js"></script>
+    <script src="/static/js/auth.js"></script>
+    <script src="/static/js/set-page-info.js"></script>
+    <script src="/static/js/set_page_info_verifier_cms_list.js"></script>
+    <script src="/static/js/issues.js"></script>
+    <script src="/static/js/getGroup.js"></script>
+    <script src="/static/js/init.js"></script>
+    <script>
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+    </script>
+    <script>
+        function Change(oc) {
+            const camera = document.getElementById('camera');
+            const mission = document.getElementById('mission_list');
+            const btn1 = document.getElementById('btn1');
+            const btn2 = document.getElementById('btn2');
+            const text = "d-flex justify-content-end";
+            const header_text = document.getElementById('header_text');
+            if (oc) {
+                camera.setAttribute("class", "row d-flex justify-content-center py-3 border border-3 border-top-0 border-black" + " d-none")
+                mission.setAttribute("class", "row row-cols-1 row-cols-md-4 py-3 border border-3 border-top-0 border-black")
+                btn1.setAttribute("class", text + ' d-none');
+                btn2.setAttribute("class", text);
+                header_text.innerHTML = '只顯示適合你的任務 <i class="bi bi-question-circle-fill" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>';
+            }
+            else {
+                camera.setAttribute("class", "row d-flex justify-content-center py-3 border border-3 border-top-0 border-black")
+                mission.setAttribute("class", "row row-cols-1 row-cols-md-4 py-3 border border-3 border-top-0 border-black" + " d-none")
+                btn1.setAttribute("class", text);
+                btn2.setAttribute("class", text + " d-none");
+                header_text.innerText = "透過掃描來領取任務";
+            }
+        }
+    </script>
 </head>
 
 <body onload="init();">
-  <div class="container px-0 border border-3 border-bottom-0 border-black">
-    <nav class="navbar bg-dark bg-gradient" data-bs-theme="dark">
-      <div class="container-fluid">
-        <div class="col d-flex justify-content-start">
-          <a class="navbar-brand mb-0 h1" href="index.html">
-            <img class="mx-1" src="static/imgs/eID-logo.png" width="55" height="30">
-            <img src="static/imgs/ISU logo-s.png" width="55" height="30">
-          </a>
-        </div>
-        <div class="col d-flex justify-content-center">
-          <p class="fs-2 mb-0 text-light">領取任務</p>
-        </div>
-        <div class="col d-flex justify-content-end">
-          <div class="dropdown">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              <i class="bi bi-gear"></i>
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end">
-              <div class="container justify-content-center">
-                <div class="row" id="dropdown">
+    <div class="container px-0 border border-3 border-bottom-0 border-black">
+        <nav class="navbar bg-dark bg-gradient" data-bs-theme="dark">
+            <div class="container-fluid">
+                <div class="col d-flex justify-content-start">
+                    <a class="navbar-brand mb-0 h1" href="index.html">
+                        <img class="mx-1" src="static/imgs/eID-logo.png" width="55" height="30">
+                        <img src="static/imgs/ISU logo-s.png" width="55" height="30">
+                    </a>
                 </div>
-              </div>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
-  </div>
-  <div class="container" style="background: rgba(157, 245, 182, 0.562);">
-    <!-- border border-secondary border-width-lg -->
-    <div class="row d-flex justify-content-end border border-3 border-top-0 border-black">
-      <div id="btn1" class="d-flex justify-content-end">
-        <button onclick="Change(1)"
-          class="m-2 border border-3 border-black rounded-5 link-underline link-underline-opacity-0 btn btn-warning">
-          <p class="fs-5 text-center my-auto text-dark">切換手動</p>
-        </button>
-      </div>
-      <div id="btn2" class="d-flex justify-content-end d-none">
-        <button onclick="Change(0)"
-          class="m-2 border border-3 border-black rounded-5 link-underline link-underline-opacity-0 btn btn-warning">
-          <p class="fs-5 text-center my-auto text-dark">切換攝影機</p>
-        </button>
-      </div>
-    </div>
-    <div class="row border border-3 border-black border-bottom-0 border-top-0">
-      <h2 class="pt-2" id="header_text">透過掃描來領取任務
-      </h2>
-      <!-- Modal -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">系統如何評斷適合的任務?</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <div class="col d-flex justify-content-center">
+                    <p class="fs-2 mb-0 text-light">領取任務</p>
+                </div>
+                <div class="col d-flex justify-content-end">
+                    <div class="dropdown">
+                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <i class="bi bi-gear"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <div class="container justify-content-center">
+                                <div class="row" id="dropdown">
+                                </div>
+                            </div>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="modal-body">
-              <h4>專長:</h4><p>任務專長跟個人專長沒有一項一樣不顯示。</p>
-              <h4>積分:</h4><p>任務積分高於個人積分不顯示。</p>
-              <h4>人數:</h4><p>任務人數滿了不顯示。</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Modal -->
+        </nav>
     </div>
-    <div class="row d-flex justify-content-center py-3 border border-3 border-top-0 border-black" id="camera">
-      <div class="col-12 col-md-7">
-        <div class="text-center">
-          <script src="/static/html5-qrcode/dist/html5-qrcode.min.js"></script>
-          <script src="/static/js/qrcode.js"></script>
-          <div id="qr-reader" style="width: 300px"></div>
+    <div class="container" style="background: rgba(157, 245, 182, 0.562);">
+        <!-- border border-secondary border-width-lg -->
+        <div class="row d-flex justify-content-end border border-3 border-top-0 border-black">
+            <div id="btn1" class="d-flex justify-content-end">
+                <button onclick="Change(1)"
+                    class="m-2 border border-3 border-black rounded-5 link-underline link-underline-opacity-0 btn btn-warning">
+                    <p class="fs-5 text-center my-auto text-dark">切換手動</p>
+                </button>
+            </div>
+            <div id="btn2" class="d-flex justify-content-end d-none">
+                <button onclick="Change(0)"
+                    class="m-2 border border-3 border-black rounded-5 link-underline link-underline-opacity-0 btn btn-warning">
+                    <p class="fs-5 text-center my-auto text-dark">切換攝影機</p>
+                </button>
+            </div>
         </div>
-      </div>
-      <div class="col-12 col-md-5">
-        <div class="text-center">
-          <img src="/static/imgs/qrcode.png" alt="">
+        <div class="row border border-3 border-black border-bottom-0 border-top-0">
+            <h2 class="pt-2" id="header_text">透過掃描來領取任務</h2>
         </div>
-      </div>
+        <div class="row d-flex justify-content-center py-3 border border-3 border-top-0 border-black" id="camera">
+            <div class="col-12 col-md-7">
+                <div class="text-center">
+                    <script src="/static/html5-qrcode/dist/html5-qrcode.min.js"></script>
+                    <script src="/static/js/qrcode.js"></script>
+                    <div id="qr-reader" style="width: 300px"></div>
+                </div>
+            </div>
+            <div class="col-12 col-md-5">
+                <div class="text-center">
+                    <img src="/static/imgs/qrcode.png" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="row row-cols-1 row-cols-md-4 py-3 border border-3 border-top-0 border-black d-none"
+            id="mission_list">
+        </div>
+        <div class="row d-flex justify-content-center border border-3 border-top-0 border-black">
+            <a href="choice.html"
+                class="col-3 col-md-2 m-2 border border-3 border-black rounded-5 link-underline link-underline-opacity-0 btn btn-primary">
+                <p class="fs-3 text-center my-auto text-light">返回</p>
+            </a>
+        </div>
     </div>
 
-    <div class="row row-cols-1 row-cols-md-4 py-3 border border-3 border-top-0 border-black d-none" id="mission_list">
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">系統如何評斷適合的任務?</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h4>專長</h4>
+                    <p>任務專長跟個人專長沒有一項一樣不顯示。</p>
+                    <h4>積分</h4>
+                    <p>任務積分高於個人積分不顯示。</p>
+                    <h4>人數</h4>
+                    <p>任務人數滿了不顯示。</p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="row d-flex justify-content-center border border-3 border-top-0 border-black">
-      <a href="choice.html"
-        class="col-3 col-md-2 m-2 border border-3 border-black rounded-5 link-underline link-underline-opacity-0 btn btn-primary">
-        <p class="fs-3 text-center my-auto text-light">返回</p>
-      </a>
+    <div id="task_modal_area">
     </div>
-  </div>
+    <!-- Modal -->
 </body>
 <script src="static/js/receive_tasks.js"></script>
 
